--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,11 @@
 # Site settings
 title: Julia Makes Things
 author: Julia Ebert
-email: your-email@domain.com
+email: julia@juliaebert.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+  Let's see what happens when a programmer makes real things.
+baseurl: "/jekyll-materialize" # the subpath of your site, e.g. /blog
+url: "http://juliaebert.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
