--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@
 title: Julia Makes Things
 author: Julia Ebert
 email: julia@juliaebert.com
+homepage: http://juliaebert.com
 description: > # this means to ignore newlines until "baseurl:"
   Let's see what happens when a programmer makes real things.
 baseurl: "/jekyll-materialize" # the subpath of your site, e.g. /blog
