For changeover to new repo name

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: julia@juliaebert.com
 homepage: http://juliaebert.com
 description: > # this means to ignore newlines until "baseurl:"
   Let's see what happens when a programmer makes real things.
-baseurl: "/jekyll-materialize" # the subpath of your site, e.g. /blog
+baseurl: "/how-to-make" # the subpath of your site, e.g. /blog
 url: "http://juliaebert.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
